@@ -11,7 +11,7 @@ if not os.path.isfile(FileName):
    sys.exit()
 
 toRead = gdcmHeader(FileName)
-ValDict = toRead.GetPubElVal()
+ValDict = toRead.GetPubEntry()
 ExploreElements = ["Patient Name", "Patient ID",
 						 "Study Date", "Study Time", "Study ID",
 						 "Study Instance UID",
@@ -24,3 +24,4 @@ for elem in ExploreElements:
 		print "[%s]" % ValDict[elem]
 	except KeyError:
 		print "NOT FOUND"
+		
